<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.melikyan.calculator.MainActivity"
    android:orientation="vertical"
    android:background="#FFFFFF"
    >

    <EditText
        android:id="@+id/Input"
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:textAlignment="viewEnd"
        android:textSize="30dp"
        android:background="#FFFFFF"
        android:enabled="false"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button8"
        android:layout_alignParentStart="true"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button2"
        android:background="#FFFFFF"
        android:text="@string/Zero"
        android:onClick="zero"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:text="@string/Point"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button"
        android:background="#FFFFFF"
        android:text="@string/Negative"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button3"
        android:background="#00FF00"
        android:text="@string/Equal"
        android:textColor="#FFFFFF"
        android:onClick="solve"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button3"
        android:text="@string/Plus"
        android:onClick="plus"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/button9"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button9"
        android:text="@string/Minus"
        android:onClick="minus"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="multiply"
        android:layout_above="@+id/button10"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button11"
        android:layout_toEndOf="@+id/button10"
        android:text="@string/Multiply"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button12"
        android:layout_alignBottom="@+id/button12"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button11"
        android:text="@string/Dis"
        android:onClick="dis"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button5"
        android:layout_toEndOf="@+id/button"
        android:background="#FFFFFF"
        android:text="3"
        android:onClick="three"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button15"
        android:layout_alignBottom="@+id/button15"
        android:layout_toEndOf="@+id/button13"
        android:background="#FFFFFF"
        android:text="6"
        android:onClick="six"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_toEndOf="@+id/button15"
        android:background="#FFFFFF"
        android:text="9"
        android:onClick="nine"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button17"
        android:layout_alignBottom="@+id/button17"
        android:layout_toEndOf="@+id/button17"
        android:text="%"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button5"
        android:layout_toEndOf="@+id/button2"
        android:background="#FFFFFF"
        android:text="2"
        android:onClick="two"
        android:textSize="25dp" />

    <Button
        android:onClick="one"
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:text="1"
        android:textSize="25dp"
         />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button11"
        android:layout_toStartOf="@+id/button9"
        android:text="5"
        android:onClick="five"
        android:textSize="25dp"
        android:background="#FFFFFF"/>

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button15"
        android:layout_toStartOf="@+id/button11"
        android:text="8"
        android:onClick="eight"
        android:textSize="25dp"
        android:background="#FFFFFF"/>

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button20"
        android:layout_alignBottom="@+id/button20"
        android:layout_toEndOf="@+id/button19"
        android:text="()"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button14"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:text="4"
        android:onClick="four"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button18"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:text="7"
        android:onClick="seven"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button19"
        android:layout_alignParentStart="true"
        android:text="C"
        android:onClick="erase"
        android:textSize="25dp" />


</RelativeLayout>
